--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,8 @@ body {
     background-color: rgb(40, 63, 62);
     color: #fff;
     border: none;
+    font-size: 15px;
+    font-weight: bold;
     padding: 10px 20px;
     border-radius: 5px;
     margin: 5px;
@@ -116,3 +118,29 @@ body {
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
   }
   
+  #saveButton, #prepareButton {
+    position: fixed;
+    right: 10px;
+    padding: 9px 13px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #ffffff;
+    background-color: rgb(40, 63, 62);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    transition: background-color 0.3s ease;
+  }
+
+  #saveButton:hover, #prepareButton:hover {
+    background-color: rgb(130, 78, 64);
+  }
+
+  #saveButton {
+    top: 10px;
+  }
+
+  #prepareButton {
+    top: 50px;
+  }
